schema/testdata/validation_permission_attribute_input_lhs/schema.keel
model Post {
  fields {
    title Text
  }

  operations {
    create createPost() with(title, coolTitle: Text) {
      @permission(expression: coolTitle == "123")
    }
  }
}