schema/testdata/errors/field_required_with_optional_input.keel
model StockLocation {
    fields {
        title Text
    }

    actions {
        //expect-error:16:35:E034:required field 'title' must be set by a non-optional input, a @set expression or with @default
        create createStockLocation() with (title?)
    }
}